Add height and width to inline-SVGs

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -8,7 +8,7 @@
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
 </section>
-<span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span>
+<span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg" width="18" height="20"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span>
 <section id="meta">
 	<div class="rit user user-$op-name">
 		<img src="$op-pic" width="40" height="40" />
