Allow comment editing, fix #130

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -58,13 +58,18 @@
 		</div>
 	</form>
 </div>
-<span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg" width="18" height="20"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span>
+<span class="sctrls"><svg class="up" xmlns="http://www.w3.org/2000/svg" width="18" height="20"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg><svg class="fl" xmlns="http://www.w3.org/2000/svg" width="18" height="20"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg><span class="ctrl">✎</span></span>
 <div class="indt umar">
 	<div id="comments">$qcommentstr</div>
+	<form id="editcomment" class="umar" hidden="">
+		<textarea id="comment-edit-ta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
+		<button type="submit">Edit</button>
+		<button type="reset" id="c-edit-reset">Cancel</button>
+	</form>
 	<form id="comment" class="target umar">
 		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Post</button>
-		<button type="reset" id="reset">Cancel</button>
+		<button type="reset" id="c-reset">Cancel</button>
 	</form>
 	<a id="addcomment" href="#comment" class="small">Add comment</a>
 </div>
