Fix answer permalink

--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -19,7 +19,7 @@
 					</div>
 				</div>
 			</div>
-			<small class="blk sumar lft"><a href="#$id" class="grey" title="Permalink">#</a> <line /> <a href="?history=$id" class="grey">History</a></small>
+			<small class="blk sumar lft"><a href="#a$id" class="grey" title="Permalink">#</a> <line /> <a href="?history=$id" class="grey">History</a></small>
 		</div>
 	</div>
 	<form class="a-edit indt" hidden="">
