Add notification dropdown

--- a/html/a/head.html
+++ b/html/a/head.html
@@ -50,6 +50,7 @@
 			<div>
 				<a href="/chat/"><span>Chat</span></a>
 				<a href="/login/"><span>Log&#160;in</span></a>
+				<nav id="notifs">$notifs</nav>
 				<a href="/mod/"><span>Mod</span></a>
 			</div>
 			<form action="/search/"><input type="search" name="q" value="$search" placeholder="Search DevDoodle" results="" /></form>
