--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -66,12 +66,12 @@
 		<button type="submit">Edit</button>
 		<button type="reset" id="c-edit-reset">Cancel</button>
 	</form>
-	<form id="comment" class="target umar">
+	<form id="comment" class="commentform target umar">
 		<textarea id="commentta" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Post</button>
-		<button type="reset" id="c-reset">Cancel</button>
+		<button type="reset" class="c-reset" id="c-reset">Cancel</button>
 	</form>
-	<a id="addcomment" href="#comment" class="small">Add comment</a>
+	<a class="addcomment small" href="#comment">Add comment</a>
 </div>
 <hr class="nomar bumar" />
 $answers
