--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -31,13 +31,13 @@
 	</form>
 </div>
 <div class="indt umar">
-	<div id="comments">$commentstr</div>
-	<form id="editcomment-$id" class="umar" hidden="">
+	<div id="comments-$id" class="comments">$commentstr</div>
+	<form id="editcomment-$id" class="editcommentform umar" hidden="">
 		<textarea id="comment-edit-ta-$id" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Edit</button>
-		<button type="reset" id="c-edit-reset-$id">Cancel</button>
+		<button type="reset" class="c-edit-reset">Cancel</button>
 	</form>
-	<form id="comment-$id" class="commentform target umar">
+	<form id="comment-$id" class="commentform target umar" data-answer="$id">
 		<textarea id="commentta-$id" placeholder="Ask for clarification or suggest improvements." class="fullwidth" rows="4"></textarea>
 		<button type="submit">Post</button>
 		<button type="reset" class="c-reset" id="c-reset-$id">Cancel</button>
