Fix ask code textarea

--- a/html/qa/ask.html
+++ b/html/qa/ask.html
@@ -74,8 +74,8 @@
 	</aside>
 	<fieldset id="step3" class="hide">
 		<h2>Code</h2>
-		<div class="ta-cont" autocapitalize="none" autocomplete="off" spellcheck="false">
-			<textarea name="code" id="code" placeholder="(Optional) code that reproduces the problem or that you want help with"></textarea>
+		<div class="ta-cont">
+			<textarea name="code" id="code" autocapitalize="none" autocomplete="off" spellcheck="false" placeholder="(Optional) code that reproduces the problem or that you want help with"></textarea>
 			<pre></pre>
 		</div>
 		<button type="submit" id="submit4" hidden="">Almost done!</button>
