Add syntax highlighting to courses

--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -18,7 +18,8 @@
 		<div id="cntrls" class="justify"><a href="$back">Back</a> <a href="./">Course-Info</a> <a href="$next">Next</a></div>
 	</div>
 	<div id="ide">
-		<textarea id="html">$html</textarea>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
 		<iframe id="output"></iframe>
 	</div>
 </div>
