--- a/html/learn/lessonpreview.html
+++ b/html/learn/lessonpreview.html
@@ -35,7 +35,8 @@
 		</div>
 	</div>
 	<div id="ide">
-		<textarea id="html">$html</textarea>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
 		<iframe id="output"></iframe>
 	</div>
 </div>
