--- a/html/learn/web/html-intro/5.html
+++ b/html/learn/web/html-intro/5.html
@@ -24,7 +24,8 @@ Intro to HTML Recap
 		<div id="cntrls"><a href="../4/" class="lft">Back</a> <a href="../../basic-elements/" class="rit">Next ❯</a></div>
 	</div>
 	<div id="ide">
-		<textarea id="html">&lt;!DOCTYPE html>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>You did it!&lt;/title>
@@ -33,6 +34,8 @@ Intro to HTML Recap
 		&lt;p>Congrats! You did it!&lt;/p>
 	&lt;/body>
 &lt;/html></textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </div>
