--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -20,7 +20,8 @@ Paragraphs - Basic Elements
 		<div id="cntrls"><a href="../../" class="lft">Back</a> <a href="../2/" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
-		<textarea id="html">&lt;!DOCTYPE html>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 		&lt;title>Paragraph excersize&lt;/title>
@@ -29,6 +30,8 @@ Paragraphs - Basic Elements
 &#9;&#9;
 	&lt;/body>
 &lt;/html></textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </div>
