--- a/html/learn/web/html-intro/3.html
+++ b/html/learn/web/html-intro/3.html
@@ -36,9 +36,12 @@ Tags and Page Setup - Intro to HTML
 		<div id="cntrls"><a href="../2/" class="lft">Back</a> <a href="../4/" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
-		<textarea id="html">&lt;!DOCTYPE html>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 &lt;/html></textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </div>
