--- a/html/learn/web/html-intro/4.html
+++ b/html/learn/web/html-intro/4.html
@@ -37,7 +37,8 @@ Your first webpage - Intro to HTML
 		<div id="cntrls"><a href="../3/" class="lft">Back</a> <a href="../5/" class="rit">Next</a></div>
 	</div>
 	<div id="ide">
-		<textarea id="html">&lt;!DOCTYPE html>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
 	&lt;head>
 &#9;&#9;
@@ -46,6 +47,8 @@ Your first webpage - Intro to HTML
 &#9;&#9;
 	&lt;/body>
 &lt;/html></textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </div>
