Fix unofficial lesson XHTML error

--- a/html/learn/lesson.html
+++ b/html/learn/lesson.html
@@ -20,6 +20,8 @@
 	<div id="ide">
 		<div id="html" class="ta-cont">
 			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </div>
