Add title to learn > basic-elements 2

--- a/html/learn/web/basic-elements/2.html
+++ b/html/learn/web/basic-elements/2.html
@@ -21,7 +21,9 @@ Headings - Basic Elements
 		<div id="html" class="ta-cont">
 			<textarea id="html-ta" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">&lt;!DOCTYPE html>
 &lt;html xmlns="http://www.w3.org/1999/xhtml">
-	&lt;head>&lt;/head>
+	&lt;head>
+		&lt;title>All the headings!&lt;/title>
+	&lt;/head>
 	&lt;body>
 &#9;&#9;
 	&lt;/body>
