Fix HTML intro lesson text

--- a/html/learn/web/html-intro/4.html
+++ b/html/learn/web/html-intro/4.html
@@ -23,8 +23,8 @@ Your first webpage - Intro to HTML
 			<img src="/learn/courses/document-title.png" style="width: 246px" />
 			<p>Add one to your document!</p>
 			<h3>How about some content?</h3>
-			<p>As was mentioned before, the paragraph element (<code>&lt;p>&lt;/p></code>) can be put inside the body element and contain paragraph text. Add a paragraph to your document!</p>
-			<p>To move on, write the basic page with a doctype and html, head, and body elements. You may refer to the example above.</p>
+			<p>As was mentioned before, the paragraph element contains regular text and (<code>&lt;p>&lt;/p></code>) can be put inside the body element. Add a paragraph to your document!</p>
+			<p>To move on, add a title element and a paragraph element.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2><span id="passtext"> </span> <small class="rit"><a href="../5/">Move on →</a></small></h2>
