--- a/html/learn/web/basic-elements/4.html
+++ b/html/learn/web/basic-elements/4.html
@@ -36,7 +36,7 @@ Links - Basic Elements
 	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
-	if (document.getElementsByTagName(‘a’)[0].src == ‘https://devdoodle.net’) {
+	if (document.getElementsByTagName(‘a’)[0].href == ‘https://devdoodle.net’) {
 		return {
 			success: false,
 			msg: 'Did you write the link correctly? Remember, it looks like this: `&lt;a href="url">text&lt;/a>`'
