--- a/html/learn/web/basic-elements/5.html
+++ b/html/learn/web/basic-elements/5.html
@@ -3,6 +3,7 @@ Images - Basic Elements
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
+            <div>In this lesson, we're going to learn how to insert an image into our webpage.</div>
             <h2>Images</h2>
 			<p>Don't we all love looking at pictures of adorable kittens and puppies on the internet? Well, this wouldn't be possible without the <code>&lt;img></code> tag! The <code>&lt;img></code> tag allows us to display images on our webpage. Just like the <code>&lt;a></code> tag, it takes an attribute <code>src</code> (which is just an abbreviation for source) which points to the url of the image. Unlike most tags, the <code>&lt;img></code> tag is self closing, so it only includes one tag with a <code>/></code> on the end of it. The syntax for the <code>&lt;img></code> tag looks something like this:</p>
 			<code class="blk">&lt;img src="url"/></code>
