--- a/html/learn/web/basic-elements/1.html
+++ b/html/learn/web/basic-elements/1.html
@@ -36,11 +36,6 @@ Paragraphs - Basic Elements
 	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
-	if (!document.getElementsByTagName('p').length) {
-		return {
-			success: false,
-			msg: 'Did you write the tags correctly? They look like this: `&lt;p>` `&lt;/p>`'
-		};
-	}
+	if (!document.getElementsByTagName('p').length) return {msg: 'Did you write the tags correctly? They look like this: `&lt;p>` `&lt;/p>`'};
 }</textarea>
 <script src="/learn/course.js" async=""></script>
