--- a/html/learn/web/basic-elements/4.html
+++ b/html/learn/web/basic-elements/4.html
@@ -4,8 +4,10 @@ Links - Basic Elements
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
 		  	<h2>Links</h2>
-			<p>Links are the binding force of the web. They allow you to navigate from one page to another just by pressing one. To create a link in HTML, we use the <code>&lt;a></code> tag. The a tag has an attribute called <code>href</code> that specifies where we want the link to go to. If we want the link to go to <code>http://placekitten.com</code> we use the attribute <code>href="http://placekitten.com"</code>. And so, our full tag would look like this:</p>
-			<code class="blk">&lt;a href="http://placekitten.com">When someone clicks on this text, they will be sent to placekitten.com!&lt;/a></code>
+			<p>Links are the binding force of the web. They allow you to navigate from one page to another with just a tap. To create a link in HTML, we use the <code>&lt;a></code> (anchor) tag. The a tag has an <em>attribute</em>, <code>href</code> (<b>H</b>ypertext <b>Ref</b>erence), that specifies where we want the link to go to. If we want the link to go to <code>http://example.com</code> (the "http" part is important) we use the attribute <code>href="http://example.com"</code>. Our full tag would look like this:</p>
+			<code class="blk">&lt;a href="http://example.com">click here!&lt;/a></code>
+			<p>This appears as: <a href="http://example.com">click here!</a></p>
+			<p>An <em>attribute</em> defines a property of an element on its <em>start tag</em> (attributes always go on start tags, not end tags). They specify additional information that may change the way the element behaves, in this case where the link goes to. The text inside the attribute isn't seen by the user, but <em>is</em> seen by the browser.</p>
 			<p>To move on, write a link to <code>https://devdoodle.net</code> with any text you want.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
@@ -27,7 +29,7 @@ Links - Basic Elements
 	&lt;/head>
 	&lt;body>
 		&lt;p>Press the link below to go to devdoodle!&lt;/p>
-		&lt;!--Write your link here!-->
+		&lt;!-- Write your link here -->
 	&lt;/body>
 &lt;/html></textarea>
 			<code id="html-display" class="code-display"></code>
@@ -36,11 +38,11 @@ Links - Basic Elements
 	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
-	if (document.getElementsByTagName(‘a’)[0].href == ‘https://devdoodle.net’) {
-		return {
-			success: false,
-			msg: 'Did you write the link correctly? Remember, it looks like this: `&lt;a href="url">text&lt;/a>`'
-		};
+	var a = document.getElementsByTagName('a')[0];
+	if (!a) return {msg: 'Did you write the link correctly? Remember, it looks like this: `&lt;a href="my-url">text&lt;/a>`'};
+	if (a.href.indexOf('https://devdoodle.net')) {
+		if (a.href.indexOf('devdoodle') != -1) return {msg: 'Make sure to include https (the *protocol*) in your URL.'};
+		return {msg: 'Did you write the attribute correctly? Remember, the href attribute should contain `https://devdoodle.net`.'};
 	}
 }</textarea>
 <script src="/learn/course.js" async=""></script>
