--- a/html/learn/web/basic-elements/5.html
+++ b/html/learn/web/basic-elements/5.html
@@ -4,8 +4,9 @@ Images - Basic Elements
 		<div id="text-inner">
 			<h1>Basic Elements</h1>
 			<h2>Images</h2>
-			<p>Don't we all love looking at pictures of adorable kittens and puppies on the internet? Well, this wouldn't be possible without the <code>&lt;img></code> tag! The <code>&lt;img></code> tag allows us to display images on our webpage. Just like the <code>&lt;a></code> tag, it takes an attribute <code>src</code> (which is just an abbreviation for source) which points to the url of the image. Unlike most tags, the <code>&lt;img></code> tag is self closing, so it only includes one tag with a <code>/></code> on the end of it. The syntax for the <code>&lt;img></code> tag looks something like this:</p>
-			<code class="blk">&lt;img src="url"/></code>
+			<p>Don't we all love looking at pictures of adorable kittens and puppies on the internet? Well, the <code>&lt;img /></code> tag lets us have these! Similar to the <code>&lt;a></code> tag, images take an attribute, <code>src</code> (<b>s</b>ou<b>rc</b>e), which points to the url of the image. Unlike most tags, the <code>&lt;img></code> tag is self-closing, since it doesn't have text content. There is <em>only one</em> image tag that acts as <em>both the start <strong>and</strong> end tags</em>. The tag looks like this:</p>
+			<code class="blk">&lt;img src="url" /></code>
+			<p>Notice that it has a <code>src</code> attribute and a slash at the end.</p>
 			<p>To move on, insert this image of a kitten on your webpage: <code>http://placekitten.com/500/250</code>.</p>
 			<button id="check" class="blk">Submit</button>
 			<div id="passed" class="passed clearfix">
@@ -36,11 +37,11 @@ Images - Basic Elements
 	</div>
 </div>
 <textarea id="validator" hidden="">function validate() {
-	if (document.getElementsByTagName(‘img’)[0].src == ‘http://placekitten.com/500/250’) {
-		return {
-			success: false,
-			msg: 'Did you insert the image correctly? Remember, the image tag looks like this: `&lt;img src="url of the image" />`'
-		};
+	var img = document.getElementsByTagName('img')[0];
+	if (!img) return {msg: 'Did you add the image correctly? Remember, it looks like this: `&lt;img src="my-url" />`'};
+	if (img.src.indexOf('http://placekitten.com/')) {
+		if (img.src.indexOf('placekitten') != -1) return {msg: 'Make sure to include https (the *protocol*) in your URL.'};
+		return {msg: 'Did you write the attribute correctly? Remember, the src attribute should contain `http://placekitten.com/500/250`.'};
 	}
 }</textarea>
 <script src="/learn/course.js" async=""></script>
