--- a/html/learn/newlesson.html
+++ b/html/learn/newlesson.html
@@ -34,7 +34,10 @@
 		<div id="cntrls"><button type="submit">Preview Lesson</button></div>
 	</div>
 	<div id="ide">
-		<textarea id="html" name="html">$html</textarea>
+		<div id="html" class="ta-cont">
+			<textarea id="html-ta" name="html" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="XHTML">$html</textarea>
+			<code id="html-display" class="code-display"></code>
+		</div>
 		<iframe id="output"></iframe>
 	</div>
 </form>
