Remove style attributes

--- a/html/learn/web/web.html
+++ b/html/learn/web/web.html
@@ -190,7 +190,7 @@
 							<a>JSON</a>
 							<div class="description">Store all kinds of data in a string that can be transmitted to a server.</div>
 						</div>
-						<div class="branch-bg" style="z-index: 1"></div>
+						<div class="branch-bg"></div>
 					</div>
 					<line class="json-ajax" />
 				</div>
@@ -220,7 +220,7 @@
 							<a>HTTP</a>
 							<div class="description">Learn how browsers and HTTP work.</div>
 						</div>
-						<div class="branch-bg" style="z-index: 1"></div>
+						<div class="branch-bg"></div>
 					</div>
 				</div>
 			</div>
