Lowercase POST method in HTML

--- a/html/chat/search.html
+++ b/html/chat/search.html
@@ -1,5 +1,5 @@
 <h1>Search Chat</h1>
-<form method="POST" action="/api/chat/search" id="form">
+<form method="post" action="/api/chat/search" id="form">
 	<input id="searchbox" type="search" name="search" results="12" autosave="chat" autofocus="" />
 	Sort by
 	<select id="sort">
