--- a/html/learn/newlesson.html
+++ b/html/learn/newlesson.html
@@ -1,4 +1,4 @@
-<form action="?preview=1&amp;submit=0" method="POST" id="row">
+<form action="?preview=1&amp;submit=0" method="post" id="row">
 	<div id="text">
 		<div id="text-inner">
 			<h1><input type="text" value="$title" name="title" placeholder="Lesson Title" autofocus="" required="" /></h1>
