--- a/html/new-login.html
+++ b/html/new-login.html
@@ -1,5 +1,5 @@
 <h1>Create New Account</h1>
-<form action="new" method="POST">
+<form action="new" method="post">
 	$errors
 	<p><label>Name: <input type="text" name="name" id="name" placeholder="Name" value="$name" required="" autofocus="" /></label> <span class="red" id="nameerr"></span></p>
 	<p><label>Email: <input type="email" name="mail" id="mail" placeholder="Email" value="$mail" required="" /></label></p>
