Fix program title editing, XHTML err

--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -1,5 +1,5 @@
 <section id="main">
-	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <small><a id="save">Fork</a></small></h1>
+	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$raw-title" /> <small><a id="save">Fork</a></small></h1>
 	<div id="row">
 		<div id="right">
 			<div id="outputbox" class="scrl"><iframe id="output" sandbox="allow-scripts"></iframe></div>
