--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -1,5 +1,5 @@
 <section id="main">
-	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" /> <small><a id="save">Fork</a></small></h1>
+	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$raw-title" /> <small><a id="save">Fork</a></small></h1>
 	<div id="row">
 		<div id="ta-cont" class="ta-cont">
 			<textarea id="code" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="//code">$code</textarea>
