--- a/html/chat/room.html
+++ b/html/chat/room.html
@@ -6,7 +6,7 @@
 			<p id="desc">$desc</p>
 		</div>
 		<form id="editform" hidden="">
-			<input id="nameedit" type="text" value="$name" class="large" />
+			<input id="nameedit" type="text" value="$name" class="large fullwidth" />
 			<textarea id="descedit" type="text" class="fullwidth">$rawdesc</textarea>
 			<button type="submit">Submit</button>
 			<button type="reset" id="reset-edit-form">Cancel</button>
