--- a/html/qa/answer.html
+++ b/html/qa/answer.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<form class="a-edit indt" hidden="">
-		<textarea rows="24">$body-html</textarea>
+		<textarea rows="24" minlength="144">$body-html</textarea>
 		<div>
 			<button type="submit">Submit Edit</button>
 			<button type="reset" class="cancel-edit">Cancel</button>
