--- a/html/qa/tags.html
+++ b/html/qa/tags.html
@@ -1,8 +1,8 @@
 <h1>Question tag list</h1>
 <form action="/api/qa/tags/add" method="post" id="addtag">
 	<button type="submit">Add new</button>
-	<input type="text" id="name" name="name" placeholder="name" required="" />
-	<input type="text" id="lang" name="lang" placeholder="Language" required="" />
+	<input type="text" id="name" name="name" placeholder="name" maxlength="48" required="" />
+	<input type="text" id="lang" name="lang" placeholder="Language" maxlength="48" required="" />
 	<input type="number" id="par" name="par" placeholder="Parent ID" />
 </form>
 <script src="tags.js" async=""></script>
