--- a/html/dev/new.html
+++ b/html/dev/new.html
@@ -2,10 +2,10 @@
 <div id="ides" class="row bumar">
 	<a href="canvas" class="half pad br">
 		<h2>Canvas</h2>
-		<img src="../canvas.png" />
+		<img src="../canvas.png" alt="interactive HTML canvas enviornment" />
 	</a>
 	<a href="html" class="half pad br">
 		<h2>XHTML</h2>
-		<img src="../html.png" />
+		<img src="../html.png" alt="XHTML + CSS + JS enviornment" />
 	</a>
 </div>
