--- a/html/learn/learn.html
+++ b/html/learn/learn.html
@@ -3,7 +3,7 @@
 	<div class="pad br">
 		<a href="web/">
 			<h2>Web Development</h2>
-			<img src="web.png" />
+			<img src="web.png" alt="" />
 		</a>
 		<div class="desc shglt">
 			Learn how to build a website with HTML, CSS, and JavaScript. You will:
@@ -17,7 +17,7 @@
 	<div class="pad br">
 		<a href="ssj/">
 			<h2>Server-side JavaScript</h2>
-			<img src="nodejs.png" />
+			<img src="nodejs.png" alt="" />
 		</a>
 		<div class="desc shglt">
 			Learn how to use Node.js and Mongodb to power a web server. You will:
@@ -32,7 +32,7 @@
 	<div class="pad br">
 		<a href="debug/">
 			<h2>Debugging</h2>
-			<img src="debug.png" />
+			<img src="debug.png" alt="" />
 		</a>
 		<div class="desc shglt">
 			Learn how to fix errors in your code by yourself!
@@ -46,7 +46,7 @@
 	<div class="pad br">
 		<a href="quality/">
 			<h2>Code Quality</h2>
-			<img src="quality.png" />
+			<img src="quality.png" alt="" />
 		</a>
 		<div class="desc shglt">
 			Improve code quality to avoid future errors and reduce maintaining cost.
