--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -11,7 +11,7 @@
 <span class="sctrls"><span title="This comment is useful."><svg class="up" width="18" height="20" xmlns="http://www.w3.org/2000/svg"><polygon points="7,-1 0,11 5,11 5,16 9,16 9,11 14,11" /></svg></span><span title="This comment is inappropriate."><svg class="fl" width="18" height="20" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 13,0 13,8 4,8 4,16 0,16" /></svg></span><span title="Edit" class="ctrl">✎</span><span title="Delete…" class="ctrl red">✕</span><span title="Undelete…" class="ctrl">↑</span></span>
 <section id="meta">
 	<div class="rit user user-$op-name">
-		<img src="$op-pic" width="40" height="40" />
+		<img src="$op-pic" alt="profile picture for $op-name" width="40" height="40" />
 		<div>
 			<a href="/user/$op-name">$op-name</a>
 			<small class="rep">$op-rep</small>
