Group form buttons in inline-block cont

--- a/html/chat/search.html
+++ b/html/chat/search.html
@@ -9,7 +9,7 @@
 		<option value="stars">Stars</option>
 	</select>
 	when said by <input type="text" name="user" id="user" />
-	in room <span class="rel"><input type="text" name="room" id="room" value="$qroom" /><div id="roomlist" hidden="" class="abs"></div></span>
+	in room <span class="rel ib"><input type="text" name="room" id="room" value="$qroom" /><div id="roomlist" hidden="" class="abs"></div></span>
 	<button>Go</button>
 </form>
 <div id="results" class="umar"></div>
