--- a/html/user/mailform.html
+++ b/html/user/mailform.html
@@ -1,8 +1,10 @@
 <form id="mailform">
 	<span id="mail">Mail: $mail</span>
 	<input type="email" id="mailinput" hidden="" value="$mail" maxlength="256" placeholder="Mail" class="max-width" />
-	<button type="submit" id="mailsave" hidden="">Save</button>
-	<button type="reset" id="mailcancel" hidden="">Cancel</button>
-	<button type="button" id="mailedit">edit</button>
+	<span class="ib">
+		<button type="submit" id="mailsave" hidden="">Save</button>
+		<button type="reset" id="mailcancel" hidden="">Cancel</button>
+		<button type="button" id="mailedit">edit</button>
+	</span>
 </form>
 <script src="user.js" async=""></script>
