CSS & Form improvements, px → em

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -2,8 +2,8 @@
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$raw-title" /> <small><a id="save">Fork</a></small></h1>
 	<div id="row">
 		<div id="ta-cont" class="ta-cont">
-			<textarea id="code" class="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="//code">$code</textarea>
-			<code id="code-display" class="code-display"></code>
+			<textarea id="code" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="//code">$code</textarea>
+			<code id="code-display"></code>
 		</div>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
