--- a/html/learn/lessonpreview.html
+++ b/html/learn/lessonpreview.html
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="cntrls">
+		<div id="cntrls" class="meta">
 			<form action="?submit=1&amp;preview=0" method="post">
 				<input type="hidden" value="$title" name="title" />
 				<input type="hidden" value="$stitle" name="stitle" />
