--- a/html/dev/new.html
+++ b/html/dev/new.html
@@ -4,8 +4,11 @@
 		<h2>Canvas</h2>
 		<img src="../canvas.png" />
 	</a>
-	<a href="html" class="half pad br">
+	<a href="html" class="half pad br rit">
 		<h2>XHTML</h2>
 		<img src="../html.png" />
+	</a>
+	<a href="text" class="pad br clear">
+		<h2>Plain Text</h2>
 	</a>
 </div>
