--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -5,7 +5,7 @@
 		<a title="This question needs improvement or is not useful."><svg class="blk dn" id="q-dn" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><polygon points="10,19 1,1 19,1" /></svg></a>
 		<a title="This question has an issue that needs to be addressed."><svg class="blk fl" xmlns="http://www.w3.org/2000/svg" width="20" height="24"><polygon points="1,1 19,1 19,11 5,11 5,23 1,23" /></svg></a>
 		<a id="med" class="ctrlicon editbtn" href="#edit" title="Edit">✎</a>
-		<a class="ctrlicon delbtn" title="Delete…">✕</a>
+		<a id="q-delete" class="ctrlicon delbtn" title="Delete…">✕</a>
 	</div>
 	<div id="q-content">
 		<div id="q-body">
