Combine runcanvas/runhtml into program.js

--- a/html/dev/canvas.html
+++ b/html/dev/canvas.html
@@ -43,4 +43,5 @@
 <input type="hidden" id="id" value="$id" />
 <input type="hidden" id="rep" value="$rep" />
 <textarea hidden="" id="canvas-js">$canvasjs</textarea>
+<script src="/dev/program.js"></script>
 <script src="/dev/runcanvas.js"></script>
