--- a/html/dev/html.html
+++ b/html/dev/html.html
@@ -55,4 +55,5 @@
 <input type="hidden" id="user" value="$op-name" />
 <input type="hidden" id="id" value="$id" />
 <input type="hidden" id="rep" value="$rep" />
+<script src="/dev/program.js"></script>
 <script src="/dev/runhtml.js"></script>
