Fix login, /notifs

--- a/html/new-login.html
+++ b/html/new-login.html
@@ -6,4 +6,4 @@
 	<input type="hidden" name="token" value="$verification-token" required="" />
 	<div><button type="submit" id="submit" disabled="">Submit</button></div>
 </form>
-<script src="new-from-github.js" async=""></script>
+<script src="../new-login.js" async=""></script>
