Checks & Crosses, fix #310

--- a/html/qa/question.html
+++ b/html/qa/question.html
@@ -80,13 +80,13 @@ $answers
 	<div id="answertips" class="pad abs">
 		<h3>Thanks for answering!</h3>
 		<p>While answering, make sure to:</p>
-		<ul>
+		<ul class="check-list">
 			<li><strong>Answer the question asked</strong>: figure out what the asker specifically wants to know and address that directly.</li>
 			<li><strong>Cite your sources</strong>: back up your statements by citing a reputable source so readers can find relevant material and know that your content is <em>verifiable</em>.</li>
 			<li><strong>Explain theroly</strong>: providing a good explanation so readers can easily grasp the concepts you're writing about – remember that they don't necessarily know as much about the technology as you.</li>
 		</ul>
 		<p>Make sure you <em>don't:</em></p>
-		<ul>
+		<ul class="cross-list">
 			<li><strong>Post only a link</strong>: external links might break, so a link-only answer could become useless in time. A link is ok as long as the relevant material is contained completly within the answer; you should quote or paraphrase relevant material from your source and add your own ideas and explanation.</li>
 			<li><strong>Say only your opinion</strong>: present the facts and let the reader make up their own opinion. Explain why you use your particular solution, but avoid snark or overly broad opinion statements.</li>
 			<li><strong>Post a comment as an answer</strong>: answers should directly address the question – if you have the same problem or just want to express your thanks, vote up the question.</li>
