--- a/html/a/foot.html
+++ b/html/a/foot.html
@@ -1,7 +1,7 @@
 
 		</main>
 		<footer id="footer" class="center-align">
-			<a href="//meta.devdoodle.net/">Meta</a> <line /> <a href="/faq/">FAQ</a> <line /> <a href="/about">About Us</a> <line /> <a href="/legal/tos">Terms of use</a> <line /> <a href="/legal/privacy">Privacy policy</a> <line /> <a href="mailto:support@devdoodle.net">Contact</a>
+			<a href="//meta.devdoodle.net/">Meta</a> <line /> <a href="//meta.devdoodle.net/faq/">FAQ</a> <line /> <a href="/about">About Us</a> <line /> <a href="/legal/tos">Terms of use</a> <line /> <a href="/legal/privacy">Privacy policy</a> <line /> <a href="mailto:support@devdoodle.net">Contact</a>
 			<br />
 			<small>Site © 2016 DevDoodle, user contributions licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.</small>
 		</footer>
